Create Media page and add video

--- a/order.html
+++ b/order.html
@@ -85,6 +85,7 @@
     <h1 class="title">Roast</h1>
     <nav class="clearfix">
         <a href="index.html">Home</a>
+        <a href="media.html">Media</a>
         <a href="order.html">On Table Order</a>
         <a href="reservation.html">Reservation</a>
     </nav>
