--- a/reservation.html
+++ b/reservation.html
@@ -82,6 +82,7 @@
         <h1 class="title">Roast</h1>
         <nav class="clearfix">
             <a href="index.html">Home</a>
+            <a href="media.html">Media</a>
             <a href="order.html">On Table Order</a>
             <a href="reservation.html">Reservation</a>
         </nav>
